--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	// DTO <-> Entity 변환 Mapper
 	implementation 'org.modelmapper:modelmapper:3.1.1'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	// Dynamic Qeury를 위한 Query DSL
 	implementation 'com.querydsl:querydsl-jpa:5.0.0'
 
