--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'//HTTP요청, SNS로그인
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.0'//이메일 전송
 	implementation 'org.springframework.boot:spring-boot-starter-validation' //validation 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-web'
