--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'application'
 }
 
+application{
+	mainClass = 'com.talearnt.TalearntApplication'
+}
 
 group = 'com.talearnt'
 version = '0.0.1-SNAPSHOT'
