--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'//AWS 관련
 }
 // queryDSL 설정 시작
 def querydslSrcDir = 'src/main/generated'
