--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'//AWS 관련
+	implementation 'org.springframework:spring-messaging'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'// STOMP 관련
 }
 // queryDSL 설정 시작
 def querydslSrcDir = 'src/main/generated'
