--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: application.properties 생성
         run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > ./src/main/resources/application.properties
 
+      - name: FCM Service Account 생성
+        run: echo "${{ secrets.FCM_KEY }}" > ./src/main/resources/firebaseServiceAccountKey.json
+
       - name: Gradle 실행 권한 생성
         run: chmod +x ./gradlew
 
