--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: 테스트 및 빌드하기
-        run: ./gradlew clean build
+        run: ./gradlew clean build -Dfirebase.enabled=false
 
       - name: GitHub Actions Public IP 얻기
         id: ip
