--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,10 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: 테스트 및 빌드하기
-        run: ./gradlew clean build -Dfirebase.enabled=false
+        run: ./gradlew clean build
+        env:
+          SPRING_PROFILES_ACTIVE: test
+          FIREBASE_ENABLED: false
 
       - name: GitHub Actions Public IP 얻기
         id: ip
