fix : Add 파이어 베이스 JSON 파일이 없어 초기화 실패 문제 해결

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,12 @@ jobs:
             docker stop talearnt-server || true
             docker rm talearnt-server || true
             docker pull ${{ steps.login-ecr.outputs.registry }}/talearnt-server:latest
-            docker run -d --name talearnt-server -e FIREBASE_ENABLED=true -p 80:80 ${{ steps.login-ecr.outputs.registry }}/talearnt-server:latest
+            docker run -d \
+              --name talearnt-server \
+              -e FIREBASE_ENABLED=true \
+              -v /home/ubuntu/firebaseServiceAccountKey.json:/app/firebaseServiceAccountKey.json \
+              -p 80:80 \
+              ${{ steps.login-ecr.outputs.registry }}/talearnt-server:latest
 
       - name: GitHub Actions IP 삭제
         run: |
