--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: FCM Service Account 생성
         run: |
-          printf '%s\n' "${{ secrets.FCM_KEY }}" > /home/ubuntu/firebaseServiceAccountKey.json
+          printf '%s\n' "${{ secrets.FCM_KEY }}" > ./src/main/resources/firebaseServiceAccountKey.json
 
       - name: Gradle 실행 권한 생성
         run: chmod +x ./gradlew
