fix : Update Deploy 및 docker file EC2 CPU 용량 줄이는 설정 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,6 +89,7 @@ jobs:
             docker run -d \
               --name talearnt-server \
               -e FIREBASE_ENABLED=true \
+              -e JAVA_OPTS="-Xms256m -Xmx512m -XX:MaxMetaspaceSize=256m -Duser.timezone=Asia/Seoul" \
               -p 8080:8080 \
               ${{ steps.login-ecr.outputs.registry }}/talearnt-server:latest
 
