chore : Add gradle.settings

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,14 @@
 rootProject.name = 'talearnt'
+
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
+dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+    }
+}
