fix : Add gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,12 @@ java {
 	}
 }
 
-repositories {
-	mavenCentral()
+
+allprojects {
+	repositories {
+		mavenCentral()
+		gradlePluginPortal()
+	}
 }
 
 dependencies {
