--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@
 systemProp.http.userAgent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36
 
 # ?? ?? ?? (?? ??)
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
-# org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.parallel=true
