--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,17 @@
 pluginManagement {
     repositories {
+        mavenCentral() // 가장 먼저 탐색
         gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
         mavenCentral()
+        google()
     }
 }
 
-dependencyResolutionManagement {
-    repositories {
-        mavenCentral()
-    }
-}
+
 
 rootProject.name = 'talearnt'
