--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,20 @@
 pluginManagement {
     repositories {
-        mavenCentral() // 가장 먼저 탐색
+        // Maven Central 본체 대신 Google 미러를 최상단에 배치
+        maven { url "https://maven-central.storage-download.googleapis.com/maven2/" }
         gradlePluginPortal()
+        mavenCentral()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven { url "https://maven-central.storage-download.googleapis.com/maven2/" }
         mavenCentral()
         google()
     }
 }
-
 
 
 rootProject.name = 'talearnt'
